fix positioning and gap on bottom part of page 1

--- a/css/_tablet.scss
+++ b/css/_tablet.scss
@@ -62,6 +62,8 @@ header {
     }
 
     .bottom {
+        position: absolute;
+        bottom: 0;
         .image {
             grid-column: span 5;
             .lettuce {
